2010-03-08  Helmut Eller  <heller@common-lisp.net>

	Try to use source-level debugging features in Allegro 8.2

	* swank-allegro.lisp (disassemble-frame): Use undocumented
	debugger::dyn-fd-analyze to figure out the PC and display it.
	(pc-source-location, ldb-code-to-src-loc, longest-common-prefix)
	(source-paths-of): New functions.
	(frame-source-location): Use pc-source-location.  Still far from
	optimal since Allegro rarely records source regions and anonymous
	functions don't seem to carry source level debug-info at all.
	(*temp-file-map*, buffer-or-file-location, find-fspec-location):
	Use a table to map temp-file names back to Emacs buffers instead
	of putting an eval-when-compile form in the source.  The
	eval-when-compile form messed up source positions.
	(*temp-file-header-end-position*, find-definition-in-buffer):
	Deleted.
	(compile-from-temp-file): Bind excl:*load-source-debug-info* and
	compiler:save-source-level-debug-info-switch so that Allegro
	doesn't try to load debug-info from deleted files.  Also put
	the filename in *temp-file-map*.

2010-03-08  Tobias C. Rittweiler <tcr@freebits.de>

	* swank.lisp (dispatch-interrupt-event): Take a connection because
	it boils down to SIGNAL-INTERRUPT which uses USE-THREADS-P which
	needs a connection.
	(install-fd-handler): Adapted accordingly.
	(simple-serve-event): Adapted accordingly. Additionally, remove
	superfluous WITH-SWANK-PROTOCOL-HANDLER as that's established by
	WITH-CONNECTION already.
	(simple-repl): Show "abort inferior lisp" restart only if not a
	more appropriate "abort some REX" restart is available. Also make
	sure to return in case of END-OF-FILE, otherwise there's an
	infinite loop where we end up in the debugger again and again
	until the user eventually selects close-connection restart himself.
	(make-repl-input-stream): Use WITH-TOP-LEVEL-RESTART so
	`sldb-quit' can be used in SLDB.

2010-03-08  Tobias C. Rittweiler <tcr@freebits.de>
